libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/labeled-argument.jsonc
//@ run: fail
//@ description: check if we error out if the path has labeled arguments
[
  "::kernel::special_form::if",
  {
    ":test": { "#literal": true }
    //~^ ERROR labeled arguments are not allowed in `if`
  },
  { "#literal": true },
  { "#literal": false }
]
